--- a/static/main.css
+++ b/static/main.css
@@ -18,11 +18,33 @@ body {
     margin-top: 15em;
 }
 
-.content-middle a {
+.nav .title {
+    font-size: 2em;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 1em;
+}
+
+.nav .links {
+    font-size: 1.1em;
+    display: inline-block;
+    margin-bottom: 1em;
+}
+
+.nav .links a {
     margin: 0.5em;
 }
 
+.nav .links a:first-child {
+    margin-left: 2em;
+}
+
+.nav .links a:last-child {
+    margin-right: 2em;
+}
+
 a {
+    font-size: inherit;
     color: #449;
     text-decoration: none;
 }
@@ -145,4 +167,40 @@ a:hover {
     padding-top: 0.1em;
     padding-bottom: 0.1em;
     border-radius: 7px;
+}
+
+.user-search {
+    position: relative;
+    max-width: 39em;
+    margin: 1em auto;
+}
+
+.user-search input {
+    background: rgba(255,255,255,0.7);
+    font-size: 1.5em;
+    padding: 0.5em;
+    font-weight: inherit;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    border-radius: 7px;
+    width: 100%;
+}
+
+.user-search input:focus {
+    outline: none;
+}
+
+.user-search .search-button {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-family: inherit;
+    color: inherit;
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: inherit;
+    padding: inherit;
+    background: rgba(0,0,0,0.2);
+    boder: 1px solid rgba(0,0,0,0.2);
 }
