--- a/static/main.css
+++ b/static/main.css
@@ -179,17 +179,18 @@ a:hover {
     position: relative;
     max-width: 39em;
     margin: 1em auto;
+    border-radius: 7px;
+    background: rgba(255,255,255,0.7);
+    padding: 0.5em;
 }
 
 .user-search input {
-    background: rgba(255,255,255,0.7);
+    background: none;
     font-size: 1.5em;
-    padding: 0.5em;
     font-weight: inherit;
     font-family: inherit;
     color: inherit;
     border: none;
-    border-radius: 7px;
     width: 100%;
 }
 
