--- a/static/main.css
+++ b/static/main.css
@@ -182,6 +182,8 @@ a:hover {
     border-radius: 7px;
     background: rgba(255,255,255,0.7);
     padding: 0.5em;
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+    
 }
 
 .user-search input {
