--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: monospace;
-    background-color: #ada;
+    background-color: #bea0d6;
     color: #444;
     position: relative;
 }
