--- a/static/main.css
+++ b/static/main.css
@@ -15,7 +15,7 @@ body {
 
 .content-middle {
     text-align: center;
-    margin-top: 13em;
+    margin-top: 11em;
 }
 
 .nav .title {
@@ -58,10 +58,15 @@ a:hover {
     vertical-align: top;
 }
 
-.quest-list.front-page {
+.quest-list.front-page,
+.activity-stream {
     max-width: 59em;
     text-align: left;
     margin-top: 2.5em;
+}
+
+.activity-stream {
+    display: inline-block;
 }
 
 .user-profile .quest-list {
@@ -164,6 +169,30 @@ a:hover {
     vertical-align: top;
     text-align: left;
     display: inline-block;
+}
+
+.activity-stream .activity-list {
+    background-color: rgba(255,255,255,0.5);
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    border-radius: 7px;
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+    border: 1px solid rgba(0,0,0,0.5);
+}
+
+.activity-stream .activity {
+    padding: 0.5em;
+}
+
+.activity-stream .activity:not(:last-child) {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.activity-avatar {
+    vertical-align: middle;
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
 }
 
 .user-profile .header {
